force-app/main/default/objects/Benchmark_Result__c/Benchmark_Result__c.object-meta.xml
<CustomObject>
    <label>Benchmark Result</label>
    <pluralLabel>Benchmark Results</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Benchmark Result Number</label>
        <displayFormat>BM-{0000}</displayFormat>
    </nameField>
    <description>Stores calculated benchmark results</description>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>