force-app/main/default/objects/Benchmark_Result__c/fields/Average_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Value__c</fullName>
    <description>Average value for the metric across all firms in the segment</description>
    <label>Average Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>