force-app/main/default/objects/Benchmark_Result__c/fields/Benchmark_Year__c.field-meta.xml
<CustomField>
    <fullName>Benchmark_Year__c</fullName>
    <description>The year the benchmark applies to</description>
    <label>Benchmark Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 