force-app/main/default/objects/Benchmark_Result__c/fields/Metric_Name__c.field-meta.xml
<CustomField>
    <fullName>Metric_Name__c</fullName>
    <description>Name of the metric being benchmarked</description>
    <label>Metric Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Revenue per Client</fullName>
            </value>
            <value>
                <fullName>AUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 