force-app/main/default/objects/Benchmark_Result__c/fields/Number_of_Firms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Firms__c</fullName>
    <description>The count of firms contributing to this specific benchmark</description>
    <label>Number of Firms</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 