force-app/main/default/objects/Benchmark_Result__c/fields/X75th_Percentile__c.field-meta.xml
<CustomField>
    <fullName>X75th_Percentile__c</fullName>
    <description>The 75th percentile value for the metric</description>
    <label>75th Percentile</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>